--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-ok
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>NOVIMMUNE // INTERNAL DOSSIER</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<h1>NOVIMMUNE // INTERNAL DOSSIER</h1>
+<p><strong>INTERNAL USE ONLY // CLASSIFIED</strong></p>
+
+<hr>
+
+<h2>СУБЪЕКТ</h2>
+<ul>
+  <li><strong>Имя:</strong> Эллис Вейл</li>
+  <li><strong>Возраст:</strong> ~23</li>
+  <li><strong>Происхождение:</strong> Швейцария (EU Pharma Zone)</li>
+  <li><strong>Роль:</strong> Полевой медицинский сотрудник</li>
+  <li><strong>Статус:</strong> Предположительно погиб (потери в поле)</li>
+</ul>
+
+<hr>
+
+<h2>ЦЕЛЬ ОПЕРАЦИИ</h2>
+<p>
+Экспедиция Novimmune была направлена на изучение эндемичных растений региона LATAM,
+демонстрирующих аномальное влияние на нейронную активность человека.
+</p>
+<p>
+Предварительные данные указывали на способность отдельных образцов влиять на память,
+эмоциональное восприятие и состояние сознания.
+</p>
+<p>
+Этический статус проекта: <strong>НА ПЕРЕСМОТРЕ</strong>.
+</p>
+
+<hr>
+
+<h2>ИНЦИДЕНТ</h2>
+<p>
+Экспедиция завершилась полной потерей персонала вследствие внешнего вмешательства.
+</p>
+<p>
+<strong>Останки субъекта не обнаружены.</strong><br>
+Физическое подтверждение статуса отсутствует.
+</p>
+
+<hr>
+
+<h2>НЕАВТОРИЗОВАННЫЕ ПОЛЕВЫЕ ЗАМЕТКИ</h2>
+<ul>
+  <li>Растения реагируют не на свет. Скорее — на присутствие.</li>
+  <li>У подопытных повторяются одинаковые сны.</li>
+  <li>Иногда кажется, что объект наблюдает в ответ.</li>
+</ul>
+
+</body>
+</html>
