--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <hr>
 
 <h2>СУБЪЕКТ</h2>
+
+<div class="photo">
+  <img src="assets/portrait.jpg" alt="Эллис Вейл — идентификация субъекта">
+  <div class="photo__cap">SUBJECT IMAGE // PRE-INCIDENT</div>
+</div>
+  
 <ul>
   <li><strong>Имя:</strong> Эллис Вейл</li>
   <li><strong>Возраст:</strong> ~23</li>
