--- a/index.html
+++ b/index.html
@@ -30,14 +30,25 @@
 <hr>
 
 <h2>ЦЕЛЬ ОПЕРАЦИИ</h2>
+
 <p>
 Экспедиция Novimmune была направлена на изучение эндемичных растений региона LATAM,
 демонстрирующих аномальное влияние на нейронную активность человека.
 </p>
+
 <p>
-Предварительные данные указывали на способность отдельных образцов влиять на память,
+Рабочее название программы:
+<span class="redact is-static">████████████</span>.
+Код проекта:
+<span class="redact" data-reveal="NV-LATAM-NA-47">███████████</span>
+</p>
+
+<p>
+Предварительные данные указывали на способность отдельных образцов влиять на
+<span class="redact" data-reveal="память (эпизодическая/ассоциативная)">██████</span>,
 эмоциональное восприятие и состояние сознания.
 </p>
+
 <p>
 Этический статус проекта: <strong>НА ПЕРЕСМОТРЕ</strong>.
 </p>
