--- a/index.html
+++ b/index.html
@@ -79,6 +79,39 @@
         <p class="muted">
           Этический статус проекта: <span class="pill">НА ПЕРЕСМОТРЕ</span>
         </p>
+        <section class="card" id="medical">
+  <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
+  <ul class="kvlist">
+    <li><span>Профиль</span><b>Полевой мед. персонал</b></li>
+    <li><span>Допуски</span><b class="redact is-static">████████</b></li>
+    <li><span>Нейропрофиль</span><b class="warn">ОТКЛОНЕНИЯ</b></li>
+    <li><span>Экспозиция</span><b>LATAM / эндемические токсины</b></li>
+    <li><span>Примечание</span><b class="redact" data-reveal="наблюдение рекомендовано">██████</b></li>
+  </ul>
+</section>
+
+<section class="card" id="flags">
+  <div class="card__title">ФЛАГИ ОПЕРАЦИИ</div>
+  <div class="tags">
+    <span class="tag">DATA: CRITICAL</span>
+    <span class="tag">ETHICS: HIGH RISK</span>
+    <span class="tag">BIO: ANOMALOUS</span>
+    <span class="tag">EXTERNAL: INTEREST</span>
+  </div>
+  <p class="muted" style="margin-top:12px">
+    Доп. материалы изъяты. Доступ ограничен по решению <span class="redact is-static">███████</span>.
+  </p>
+</section>
+
+<section class="card" id="log">
+  <div class="card__title">СИСТЕМНЫЙ ЛОГ</div>
+  <div class="log mono">
+    <div>[07:42] Neural response anomaly detected</div>
+    <div>[08:11] Memory consistency deviation</div>
+    <div>[08:46] Subject reports recurring visual artifacts</div>
+    <div>[09:03] Ethics flag raised: <span class="warn">PENDING</span></div>
+  </div>
+</section>
       </section>
 
       <section class="card" id="incident">
