--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#subject" class="q">SUBJECT</a>
       <a href="#objective" class="q">OP</a>
       <a href="#incident" class="q">INCIDENT</a>
+      <a href="#family" class="q">FAMILY</a>
       <a href="#notes" class="q">NOTES</a>
     </nav>
   </header>
@@ -30,13 +31,13 @@
 
         <div class="photo">
           <img src="assets/portrait.jpg" alt="Эллис Вейл — идентификация субъекта">
-          <div class="photo__cap">SUBJECT IMAGE // PRE-INCIDENT</div>
+          <div class="photo__cap">ARCHIVAL IMAGE // PRE-OPERATION</div>
         </div>
 
         <ul class="kvlist">
           <li><span>Имя</span><b>Эллис Вейл</b></li>
-          <li><span>Возраст</span><b>~23</b></li>
-          <li><span>Происхождение</span><b>Швейцария (EU Pharma Zone)</b></li>
+          <li><span>Возраст</span><b>23</b></li>
+          <li><span>Происхождение</span><b>Швейцария (EEC)</b></li>
           <li><span>Роль</span><b>Полевой мед. сотрудник</b></li>
           <li><span>Статус</span><b class="warn">Предположительно погиб</b></li>
         </ul>
@@ -63,6 +64,23 @@
           демонстрирующих аномальное влияние на нейронную активность человека.
         </p>
 
+<p>
+В рамках оптимизации полевых работ к экспедиции был временно привлечён
+внешний региональный специалист с подтверждённым опытом работы в зоне LATAM.
+</p>
+
+<p class="muted">
+Первичная верификация профиля показала соответствие заявленным компетенциям.
+Углублённая проверка источников и аффилиаций не проводилась в связи со сжатыми сроками.
+</p>
+
+<p>
+После инцидента выявлены существенные расхождения между заявленной ролью специалиста
+и его фактическими действиями в зоне операции.
+<span class="pill">ДОПУСК: НА ПЕРЕСМОТРЕ</span>
+</p>
+
+        
         <p>
           Рабочее название программы:
           <span class="redact is-static">████████████</span>.
@@ -133,12 +151,26 @@
         </p>
       </section>
 
+      <section class="card" id="family">
+  <div class="card__title">СЕМЕЙНЫЕ СВЯЗИ (ОГРАНИЧЕННЫЙ ДОСТУП)</div>
+
+  <p>
+    Часть родственников субъекта задействована в смежных корпоративных структурах.
+    Прямое влияние на ход операции не зафиксировано.
+  </p>
+
+  <p class="muted">
+    Рекомендовано ограничить информирование семьи о деталях инцидента.
+  </p>
+</section>
+
+      
       <section class="card" id="notes">
         <div class="card__title">НЕАВТОРИЗОВАННЫЕ ПОЛЕВЫЕ ЗАМЕТКИ</div>
         <ul class="list">
           <li>Растения реагируют не на свет. Скорее — на присутствие.</li>
           <li>У подопытных повторяются одинаковые сны.</li>
-          <li>Иногда кажется, что объект наблюдает в ответ.</li>
+          <li>Я не уверен, что нас предали сразу. Но кто-то точно знал, куда мы идём.</li>
           <li>Я не уверен, что мы “изучаем” это. Иногда — наоборот.</li>
         </ul>
       </section>
