--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
         <div class="photo">
           <img src="assets/portrait.jpg" alt="Эллис Вейл — идентификация субъекта">
-          <div class="photo__cap">ARCHIVAL IMAGE // PRE-OPERATION</div>
+          <div class="photo__cap">ARCHIVAL IMAGE</div>
         </div>
 
         <ul class="kvlist">
           <li><span>Имя</span><b>Эллис Вейл</b></li>
-          <li><span>Возраст</span><b>23</b></li>
+          <li><span>Дата рождения</span><b>16.11.2054</b></li>
           <li><span>Происхождение</span><b>Швейцария (EEC)</b></li>
           <li><span>Роль</span><b>Полевой мед. сотрудник</b></li>
           <li><span>Статус</span><b class="warn">Предположительно погиб</b></li>
