--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="brand">
       <div class="brand__title">NOVIMMUNE // INTERNAL DOSSIER</div>
       <div class="brand__sub">INTERNAL USE ONLY // CLASSIFIED</div>
+      <div class="brand__meta mono">
+  DOSSIER REV: 1.3 // LAST UPDATE: 2075-09-12 // ORIGIN: NOVIMMUNE EEC / LATAM
+</div>
     </div>
 
     <nav class="quick">
@@ -71,7 +74,7 @@
 
 <p class="muted">
 Первичная верификация профиля показала соответствие заявленным компетенциям.
-Углублённая проверка источников и аффилиаций не проводилась в связи со сжатыми сроками.
+Углублённая проверка источников и аффилиаций не проводилась в связи с сжатыми сроками.
 </p>
 
 <p>
