--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <a href="#incident" class="q">INCIDENT</a>
       <a href="#family" class="q">FAMILY</a>
       <a href="#notes" class="q">NOTES</a>
+      <a href="archive.html" class="q">ARCHIVE</a>
     </nav>
   </header>
 
