--- a/archive.html
+++ b/archive.html
@@ -30,24 +30,22 @@
       <section class="card" id="early">
         <div class="card__title">РАННИЙ ИНЦИДЕНТ (АРХИВ)</div>
 
-        <p>В возрасте около 10 лет субъект стал свидетелем нештатной медицинской ситуации
+        <p>В возрасте около 10 лет Эллис стал свидетелем одной из внештатных ситуаций
         в пределах закрытого корпоративного жилого сектора.</p>
 
-        <p>Несовершеннолетнее лицо из ближайшего окружения продемонстрировало
-        острую реакцию на имплантированный модуль, сопровождавшуюся кровопотерей и признаками анафилаксии.</p>
+        <p>Ответственные сотрудники одной из мед. бригад стояли в ожидании подтверженгия протокола и разрешения "с верху" на вмешательство и оказывание помощи.</p>
 
-        <p>Ответственные взрослые сотрудники ожидали подтверждения протокола и разрешения на вмешательство.</p>
+        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь и Эллис наблюдал безраличие со стороны людей вокруг и также работников неотложки.</p>
 
-        <p>Субъект произвёл несанкционированное использование стандартного медицинского набора
-        с отклонением от регламентированных инструкций.</p>
+        <p>События того дня сильно отпечаталось в его памяти. Эллис пробовал это обсудить с родителями, но те не могли объяснить ребенку почему так работает мир.</p>
 
-        <p><span class="pill">ИТОГ</span> Жизнь пострадавшего была сохранена. Действия субъекта классифицированы как нарушение протокола.</p>
+        <p><span class="pill">ИТОГ</span> ......</p>
 
         <div class="note">
           <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
           <div class="note__body">
             Они ждали разрешения.<br>
-            Я не понимал, что именно должно было случиться, чтобы оно появилось.
+            Я не понимал, что именно должно было случиться, чтобы оно появилось и лишь мог видеть как человек медленно умирает.
           </div>
         </div>
       </section>
