--- a/archive.html
+++ b/archive.html
@@ -33,19 +33,20 @@
         <p>В возрасте около 10 лет Эллис стал свидетелем одной из внештатных ситуаций
         в пределах закрытого корпоративного жилого сектора.</p>
 
-        <p>Ответственные сотрудники одной из мед. бригад стояли в ожидании подтверженгия протокола и разрешения "с верху" на вмешательство и оказывание помощи.</p>
+        <p>Ответственные сотрудники медицинской бригады зафиксировали состояние, но воздержались от вмешательства, ожидая подтверждения протокола и разрешения на экстренные действия руководства "с выше".</p>
 
-        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь и Эллис наблюдал безраличие со стороны людей вокруг и также работников неотложки.</p>
+        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь, все лишь осбюуждали возможные риски и правильность регламента. Все это время Эллис наблюдал как человек медленоно, но верно задыхался и просил ему помочь.</p>
 
-        <p>События того дня сильно отпечаталось в его памяти. Эллис пробовал это обсудить с родителями, но те не могли объяснить ребенку почему так работает мир.</p>
+        <p>События того дня сильно отпечаталось в его памяти как первый опыт столкновения с приоритетом сохранения процедур, чем важности жизни.</p>
 
-        <p><span class="pill">ИТОГ</span> ......</p>
+        <p>Эллис пробовал это обсудить с родителями, но они в свою очерель объяснили это тем, что ответственность важнее импульсивных решений.</p>
+
 
         <div class="note">
           <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
           <div class="note__body">
             Они ждали разрешения.<br>
-            Я не понимал, что именно должно было случиться, чтобы оно появилось и лишь мог видеть как человек медленно умирает.
+            Я не понимал почему они стоят. Что нужно, чтобы появилось разрешение помочь. Я лишь мог видеть как человек медленно умирает и галвное - никто не считал это своей ошибкой.
           </div>
         </div>
       </section>
