--- a/archive.html
+++ b/archive.html
@@ -33,9 +33,9 @@
         <p>В возрасте около 10 лет Эллис стал свидетелем одной из внештатных ситуаций
         в пределах закрытого корпоративного жилого сектора.</p>
 
-        <p>Ответственные сотрудники медицинской бригады зафиксировали состояние, но воздержались от вмешательства, ожидая подтверждения протокола и разрешения на экстренные действия руководства "с выше".</p>
+        <p>Ответственные сотрудники медицинской бригады зафиксировали состояние, но воздержались от вмешательства, ожидая подтверждения протокола и разрешения на экстренные действия от руководства "свыше".</p>
 
-        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь, все лишь осбюуждали возможные риски и правильность регламента. Все это время Эллис наблюдал как человек медленоно, но верно задыхался и просил ему помочь.</p>
+        <p>Из-за продолжительного ожидания им не удалось оказать своевременную помощь, все вокруг лишь обсуждали возможные риски и правильность регламента. Все это время Эллис наблюдал как человек медленоно, но верно задыхался и просил помощи.</p>
 
         <p>События того дня сильно отпечаталось в его памяти как первый опыт столкновения с приоритетом сохранения процедур, чем важности жизни.</p>
 
@@ -45,8 +45,8 @@
         <div class="note">
           <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
           <div class="note__body">
-            Они ждали разрешения.<br>
-            Я не понимал почему они стоят. Что нужно, чтобы появилось разрешение помочь. Я лишь мог видеть как человек медленно умирает и галвное - никто не считал это своей ошибкой.
+            Они ждали разрешения. Я не понимал почему они стоят и просто смотрят.<br>
+            Что нужно, чтобы появилось разрешение помочь. Я лишь мог видеть как человек медленно умирает и галвное - никто не считал это своей ошибкой.
           </div>
         </div>
       </section>
