--- a/archive.html
+++ b/archive.html
@@ -30,7 +30,15 @@
       <section class="card" id="early">
         <div class="card__title">РАННИЙ ИНЦИДЕНТ (АРХИВ)</div>
 
-        <p>В возрасте около 10 лет Эллис стал свидетелем одной из внештатных ситуаций
+        <div class="evidence">
+  <img src="assets/archive/cam_2064_sector-eu.jpg" alt="Surveillance still, EU Pharma Zone, 2064">
+  <div class="evidence__cap mono">
+    DATE: 2064-03-15 // SOURCE: MUNICIPAL CAM NODE 078
+  </div>
+</div>
+
+        
+        <p>В возрасте около 9 лет Эллис стал свидетелем одной из внештатных ситуаций
         в пределах закрытого корпоративного жилого сектора.</p>
 
         <p>Ответственные сотрудники медицинской бригады зафиксировали состояние, но воздержались от вмешательства, ожидая подтверждения протокола и разрешения на экстренные действия от руководства "свыше".</p>
