--- a/archive.html
+++ b/archive.html
@@ -115,6 +115,39 @@
         </div>
       </section>
 
+      <section class="card" id="offreg">
+  <div class="card__title">ОПЕРАЦИЯ ВНЕ РЕЕСТРА // LATAM (ДОСЬЕ)</div>
+
+  <div class="evidence">
+    <div class="video">
+      <iframe
+        src="https://www.youtube.com/watch?v=glOnDceqqJc"
+        title="Off-registry footage"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
+
+    <div class="evidence__cap mono">
+      VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
+      DATE: 2074-08-22 // SOURCE: STREET POLE CAM NODE 12 (LATAM)<br>
+      AUDIO: DEGRADED // LOCATION: REDACTED
+    </div>
+  </div>
+
+  <p><span class="pill">ФОРМАЛЬНО</span> гуманитарная и эвакуационная миссия: медсопровождение, помощь гражданским, стабилизация.</p>
+  <p><span class="pill">ФАКТИЧЕСКИ</span> вывод агентов, сбор информации, экстренная эвакуация активов.</p>
+
+  <div class="note">
+    <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
+    <div class="note__body">
+      «Гуманитарка» — это когда в отчёте.<br>
+      На земле — это просто способ не задавать вопросы.
+    </div>
+  </div>
+</section>
+
+      
       <section class="card" id="pre">
         <div class="card__title">ПРЕДВАРИТЕЛЬНЫЕ ИНЦИДЕНТЫ (КРАТКО)</div>
 
