--- a/archive.html
+++ b/archive.html
@@ -121,7 +121,7 @@
   <div class="evidence">
     <div class="video">
       <iframe
-        src="https://www.youtube.com/watch?v=glOnDceqqJc"
+        src="https://youtu.be/glOnDceqqJc?si=zO6saHTpqvkbrYNT"
         title="Off-registry footage"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
