--- a/archive.html
+++ b/archive.html
@@ -119,14 +119,16 @@
   <div class="card__title">ОПЕРАЦИЯ ВНЕ РЕЕСТРА // LATAM (ДОСЬЕ)</div>
 
   <div class="evidence">
-    <div class="video">
-      <iframe
-        src="https://youtu.be/glOnDceqqJc?si=zO6saHTpqvkbrYNT"
-        title="Off-registry footage"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-    </div>
+  <video class="vid" autoplay muted loop playsinline>
+    <source src="assets/OP whitelist.mp4" type="video/mp4">
+  </video>
+
+  <div class="evidence__cap mono">
+    VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
+    DATE: 2074-08-22 // SOURCE: STREET POLE CAM NODE 12 (LATAM)<br>
+    AUDIO: UNAVAILABLE // LOCATION: REDACTED
+  </div>
+</div>
 
     <div class="evidence__cap mono">
       VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
