--- a/archive.html
+++ b/archive.html
@@ -118,10 +118,12 @@
       <section class="card" id="offreg">
   <div class="card__title">ОПЕРАЦИЯ ВНЕ РЕЕСТРА // LATAM (ДОСЬЕ)</div>
 
-  <div class="evidence">
-  <video class="vid" autoplay muted loop playsinline>
-    <source src="assets/OP whitelist.mp4" type="video/mp4">
-  </video>
+<div class="evidence">
+  <div class="video">
+    <video controls preload="metadata">
+      <source src="assets/OP whitelist.mp4" type="video/mp4">
+    </video>
+  </div>
 
   <div class="evidence__cap mono">
     VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
@@ -130,12 +132,6 @@
   </div>
 </div>
 
-    <div class="evidence__cap mono">
-      VIDEO EXTRACT // OFF-REGISTRY RELIEF<br>
-      DATE: 2074-08-22 // SOURCE: STREET POLE CAM NODE 12 (LATAM)<br>
-      AUDIO: DEGRADED // LOCATION: REDACTED
-    </div>
-  </div>
 
   <p><span class="pill">ФОРМАЛЬНО</span> гуманитарная и эвакуационная миссия: медсопровождение, помощь гражданским, стабилизация.</p>
   <p><span class="pill">ФАКТИЧЕСКИ</span> вывод агентов, сбор информации, экстренная эвакуация активов.</p>
