--- a/archive.html
+++ b/archive.html
@@ -139,8 +139,8 @@
   <div class="note">
     <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
     <div class="note__body">
-      «Гуманитарка» — это когда в отчёте.<br>
-      На земле — это просто способ не задавать вопросы.
+      Блять...<br>
+      Помогите...
     </div>
   </div>
 </section>
