--- a/archive.html
+++ b/archive.html
@@ -110,7 +110,7 @@
         <div class="note">
           <div class="note__title mono">ЛИЧНО</div>
           <div class="note__body">
-            Я быстро понял, что если сомневаюсь — я мешаю.
+            Я быстро понял, что если сомневаюсь - я мешаю.
           </div>
         </div>
       </section>
@@ -158,8 +158,8 @@
         <div class="note">
           <div class="note__title mono">ЛИЧНАЯ ПОМЕТКА</div>
           <div class="note__body">
-            Если я чувствую — я медленнее.<br>
-            Если я медленнее — кто-то не выживает.
+            //////<br>
+            /////
           </div>
         </div>
       </section>
