--- a/index.html
+++ b/index.html
@@ -172,10 +172,9 @@
       <section class="card" id="notes">
         <div class="card__title">НЕАВТОРИЗОВАННЫЕ ПОЛЕВЫЕ ЗАМЕТКИ</div>
         <ul class="list">
-          <li>Растения реагируют не на свет. Скорее — на присутствие.</li>
+          <li>Растения реагируют не на свет. Скорее - на присутствие.</li>
           <li>У подопытных повторяются одинаковые сны.</li>
           <li>Я не уверен, что нас предали сразу. Но кто-то точно знал, куда мы идём.</li>
-          <li>Я не уверен, что мы “изучаем” это. Иногда — наоборот.</li>
         </ul>
       </section>
     </section>
