--- a/archive.html
+++ b/archive.html
@@ -70,7 +70,7 @@
           <li>«Ты справишься. Ты умный.»</li>
           <li>«Не усложняй.»</li>
           <li>«Эмоции мешают работе.»</li>
-          <li>«Главное — результат.»</li>
+          <li>«Главное результат.»</li>
         </ul>
 
         <div class="note">
