--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
           ACCESS LEVEL: <span class="warn">RESTRICTED</span> // ACTION REQUIRED: SELECT
         </p>
 
-        <div class="grid2" style="margin-top:12px">
-          <a class="q" href="dossiers/daniel-armet.html">
-            DANIEL ARMET <span class="pill" style="margin-left:8px">ACTIVE</span>
-            <span class="pill warn" style="margin-left:8px">RESTRICTED</span>
-          </a>
+        <div class="grid2">
+
+  <a class="q" href="daniel-armet.html">
+    DANIEL ARMET
+    <span class="pill warn" style="margin-left:8px">ACTIVE</span>
+    <span class="pill warn" style="margin-left:8px">RESTRICTED</span>
+  </a>
 
           <a class="q" href="archive.html">
             ELLIS VEIL <span class="pill" style="margin-left:8px">ARCHIVED</span>
