--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <span class="pill warn" style="margin-left:8px">RESTRICTED</span>
   </a>
 
-          <a class="q" href="archive.html">
+          <a class="q" href="ellis.html">
             ELLIS VEIL <span class="pill" style="margin-left:8px">ARCHIVED</span>
           </a>
         </div>
