--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>METACORP // DOSSIER: DANIEL ARMET</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     :root{
       --warn:#ff2e4f;
@@ -117,6 +117,6 @@
     </section>
   </main>
 
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
