--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -24,7 +24,7 @@
     </div>
 
     <nav class="quick">
-      <a href="../index.html" class="q">TERMINAL</a>
+      <a href="index.html" class="q">TERMINAL</a>
       <a href="#subject" class="q">SUBJECT</a>
       <a href="#objective" class="q">OP</a>
       <a href="#medical" class="q">MED</a>
