--- a/archive.html
+++ b/archive.html
@@ -16,7 +16,7 @@
     </div>
 
     <nav class="quick">
-      <a href="index.html" class="q">← BACK</a>
+      <a href="ellis.html" class="q">← BACK</a>
       <a href="#early" class="q">EARLY</a>
       <a href="#family" class="q">FAMILY</a>
       <a href="#edu" class="q">EDU</a>
