--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -4,15 +4,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>METACORP // DOSSIER: DANIEL ARMET</title>
+
   <link rel="stylesheet" href="styles.css">
+
   <style>
     :root{
       --warn:#ff2e4f;
       --cyan:#ff4d6d;
     }
+
+    body{
+      background:
+        radial-gradient(900px 600px at 60% 10%, rgba(255,46,79,.08), transparent 60%),
+        radial-gradient(900px 600px at 20% 40%, rgba(255,59,106,.06), transparent 60%),
+        var(--bg) !important;
+    }
   </style>
 </head>
-
+  
 <body>
   <header class="topbar">
     <div class="brand">
