--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -14,11 +14,11 @@
     }
 
     body{
-      background:
-        radial-gradient(900px 600px at 60% 10%, rgba(255,46,79,.08), transparent 60%),
-        radial-gradient(900px 600px at 20% 40%, rgba(255,59,106,.06), transparent 60%),
-        var(--bg) !important;
-    }
+  background:
+    radial-gradient(1000px 700px at 60% 8%, rgba(255,46,79,.16), transparent 60%),
+    radial-gradient(900px 600px at 20% 35%, rgba(255,59,106,.12), transparent 60%),
+    linear-gradient(180deg, #060405, #030203);
+}
   </style>
 </head>
   
