--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -9,9 +9,24 @@
 
   <style>
     :root{
-      --warn:#ff2e4f;
-      --cyan:#ff4d6d;
-    }
+  /* базовая тьма */
+  --bg:#050406;
+
+  /* панели — в тёплый красно-чёрный */
+  --panel1: rgba(18,6,8,.82);
+  --panel2: rgba(12,4,6,.78);
+
+  /* линии и рамки */
+  --line: rgba(255,80,100,.18);
+
+  /* текст */
+  --text:#ffeef2;
+  --muted:#cfa0aa;
+
+  /* акценты */
+  --warn:#ff2e4f;
+  --cyan:#ff3b6a;
+}
 
     body{
   background:
