--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
 
     <nav class="quick">
+      <a href="index.html" class="q">TERMINAL</a>
       <a href="#dossiers" class="q">DOSSIERS</a>
       <a href="archive.html" class="q">ARCHIVE</a>
     </nav>
