--- a/ellis.html
+++ b/ellis.html
@@ -18,6 +18,7 @@
     </div>
 
     <nav class="quick">
+      <a href="index.html" class="q">TERMINAL</a>
       <a href="#subject" class="q">SUBJECT</a>
       <a href="#objective" class="q">OP</a>
       <a href="#incident" class="q">INCIDENT</a>
