--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -27,7 +27,12 @@
   --warn:#ff2e4f;
   --cyan:#ff3b6a;
 }
+.q:first-child{
+  border-color: rgba(255,80,100,.35);
+  background: rgba(255,40,60,.08);
+}
 
+    
     body{
   background:
     radial-gradient(1000px 700px at 60% 8%, rgba(255,46,79,.16), transparent 60%),
