--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -95,7 +95,7 @@
 
     <section class="main">
       <section class="card" id="objective">
-        <div class="card__title">ЦЕЛЬ ОПЕРАЦИЙ</div>
+        <div class="card__title">ИНФОРМАЦИЯ</div>
 
         <p>
           Субъект задействован в операциях Metacorp по выявлению и контролю
