--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -98,8 +98,12 @@
         <div class="card__title">ИНФОРМАЦИЯ</div>
 
         <p>
-          Субъект задействован в операциях Metacorp по выявлению и контролю
-          неконтролируемых искусственных интеллектов
+          Субъект является
+искусственно выращенным клоном,
+созданным в рамках неизвестной программы.<br>
+          Данные предположения официально не подтверждены.
+Исходная документация отсутствует.
+
           (<span class="pill">ROGUE / UNCHAINED AIs</span>).
         </p>
 
