--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -112,6 +112,76 @@
 
       </section>
 
+      <section class="card" id="origin">
+  <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
+
+  <p>
+    Субъект с высокой вероятностью является
+    искусственно выращенным клоном,
+    созданным в рамках неизвестной программы
+    с чётко заданной операционной целью.
+  </p>
+
+  <p class="muted">
+    Первоначально предполагалось, что субъект предназначен
+    для <span class="warn"><s>краткосрочной эксплуатации</s></span>
+    <span class="warn"><s>утилизации после выполнения задачи</s></span>
+    ограниченного цикла активного применения.
+  </p>
+
+  <p class="muted">
+    Данные предположения официально не подтверждены.
+    Исходная документация отсутствует.
+  </p>
+</section>
+
+      <section class="card" id="family">
+  <div class="card__title">СЕМЕЙНЫЕ СВЯЗИ (ОГРАНИЧЕННЫЙ ДОСТУП)</div>
+
+  <p>
+    Биологическая семья субъекта отсутствует.
+  </p>
+
+  <p>
+    Подтверждено существование других идентичных экземпляров,
+    классифицированных как <span class="pill">SIBLING SUBJECTS</span>.
+  </p>
+
+  <p class="muted">
+    Известно минимум о двух женских экземплярах.
+    Их текущий статус, степень автономии и местоположение неизвестны.
+  </p>
+
+  <p class="muted">
+    Контакт между субъектами не зафиксирован.
+    Вероятность преднамеренного разделения — высокая.
+  </p>
+</section>
+
+      <section class="card" id="relations">
+  <div class="card__title">СОЦИАЛЬНЫЕ СВЯЗИ / ПОВЕДЕНИЕ</div>
+
+  <p>
+    Несмотря на искусственное происхождение,
+    субъект демонстрирует устойчивую способность
+    к формированию социальных связей.
+  </p>
+
+  <p>
+    Друзей заводит легко.
+    Проявляет внимание к эмоциональному состоянию окружающих.
+    Эмпатия выражена и стабильна.
+  </p>
+
+  <p class="muted">
+    Наблюдаются трудности интерпретации
+    неформальных человеческих социальных норм.
+    Субъект склонен к прямым формулировкам
+    и буквальному восприятию взаимодействий.
+  </p>
+</section>
+
+      
       <section class="card" id="medical">
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
 
