--- a/index.html
+++ b/index.html
@@ -45,10 +45,22 @@
     <span class="pill warn" style="margin-left:8px">RESTRICTED</span>
   </a>
 
-          <a class="q" href="ellis.html">
-            ELLIS VEIL <span class="pill" style="margin-left:8px">ARCHIVED</span>
-          </a>
-        </div>
+  <a class="q" href="ellis.html">
+    ELLIS VEIL
+    <span class="pill" style="margin-left:8px">ARCHIVED</span>
+  </a>
+
+  <a class="q" href="nico-vasquez.html">
+    NICO VASQUEZ
+    <span class="pill" style="margin-left:8px">ACTIVE</span>
+  </a>
+
+  <a class="q" href="iren.html">
+    IREN
+    <span class="pill" style="margin-left:8px">NETRUNNER</span>
+  </a>
+
+</div>
 
         <div class="note">
           <div class="note__title mono">NOTICE</div>
