--- a/daniel-armet.html
+++ b/daniel-armet.html
@@ -94,32 +94,14 @@
     </aside>
 
     <section class="main">
-      <section class="card" id="objective">
-        <div class="card__title">ИНФОРМАЦИЯ</div>
-
-        <p>
-          Субъект является
-          искусственно выращенным клоном,
-          созданным в рамках неизвестной программы.<br>
-          Данные предположения официально не подтверждены.
-          Исходная документация отсутствует.
-        </p>
-
-        <p>
-          Предыстория до активации: <span class="redact is-static">НЕДОСТУПНО</span>.
-          Возраст актива: <b>~6 лет</b>.
-        </p>
-
-      </section>
 
       <section class="card" id="origin">
   <div class="card__title">ПРОИСХОЖДЕНИЕ / СТАТУС</div>
 
   <p>
-    Субъект с высокой вероятностью является
+    Субъект является
     искусственно выращенным клоном,
-    созданным в рамках неизвестной программы
-    с чётко заданной операционной целью.
+    созданным в рамках неизвестной программы.
   </p>
 
   <p class="muted">
@@ -129,8 +111,13 @@
     ограниченного цикла активного применения.
   </p>
 
+        <p>
+          Предыстория до активации: <span class="redact is-static">НЕДОСТУПНО</span>.
+          Возраст актива: <b>~6 лет</b>.
+        </p>
+        
   <p class="muted">
-    Данные предположения официально не подтверждены.
+    Данные официально не подтверждены.
     Исходная документация отсутствует.
   </p>
 </section>
@@ -139,7 +126,7 @@
   <div class="card__title">СЕМЕЙНЫЕ СВЯЗИ (ОГРАНИЧЕННЫЙ ДОСТУП)</div>
 
   <p>
-    Биологическая семья субъекта отсутствует.
+    Биологическая семья субъекта <span class="redact is-static">НЕДОСТУПНО</span>.
   </p>
 
   <p>
@@ -148,14 +135,13 @@
   </p>
 
   <p class="muted">
-    Известно минимум о двух женских экземплярах.
-    Их текущий статус, степень автономии и местоположение неизвестны.
+    Известно минимум о двух субъектках женского пола
+    Статус: принадлежность к группе
+    <b>ИНКВИЗИТОРОВ</b>
+    — <b>ПОДТВЕРЖДЕНА</b>.<br>
+    Степень автономии и местоположение неизвестны.
   </p>
 
-  <p class="muted">
-    Контакт между субъектами не зафиксирован.
-    Вероятность преднамеренного разделения — высокая.
-  </p>
 </section>
 
       <section class="card" id="relations">
@@ -168,7 +154,7 @@
   </p>
 
   <p>
-    Друзей заводит легко.
+    Близкие отношения заводит легко.
     Проявляет внимание к эмоциональному состоянию окружающих.
     Эмпатия выражена и стабильна.
   </p>
@@ -186,8 +172,8 @@
         <div class="card__title">МЕДИЦИНСКАЯ КАРТА (ВЫДЕРЖКА)</div>
 
         <ul class="kvlist">
-          <li><span>Нейропрофиль</span><b class="warn">НЕСТАНДАРТНЫЙ</b></li>
-          <li><span>Псих. модель</span><b>Эмпатическая</b></li>
+          <li><span>Нейропрофиль</span><b class="warn">Высокая аффективная отзывчивост</b></li>
+          <li><span>Псих. модель</span><b>Эмпатия сохранена</b></li>
           <li><span>Соц. адаптация</span><b>ФУНКЦИОНАЛЬНА</b></li>
           <li><span>Коммуникация</span><b>ПРЯМОЛИНЕЙНАЯ</b></li>
           <li><span>Дерматология</span><b class="warn">АНОМАЛИЯ / РИСК</b></li>
