--- a/index.html
+++ b/index.html
@@ -39,11 +39,20 @@
 
         <div class="grid2">
 
-  <a class="q" href="daniel-armet.html">
-    DANIEL ARMET
-    <span class="pill warn" style="margin-left:8px">ACTIVE</span>
-    <span class="pill warn" style="margin-left:8px">RESTRICTED</span>
-  </a>
+  <a class="q dossier-card" href="daniel-armet.html">
+  <div class="thumb">
+    <img src="assets/portrait1.jpg" alt="Daniel Armet">
+  </div>
+
+  <div class="meta">
+    <div class="name">DANIEL ARMET</div>
+    <div class="role mono">TECH / AGENT METACORP</div>
+    <div class="tags">
+      <span class="pill warn">ACTIVE</span>
+      <span class="pill warn">RESTRICTED</span>
+    </div>
+  </div>
+</a>
 
   <a class="q" href="ellis.html">
     ELLIS VEIL
