--- a/index.html
+++ b/index.html
@@ -37,36 +37,51 @@
           ACCESS LEVEL: <span class="warn">RESTRICTED</span> // ACTION REQUIRED: SELECT
         </p>
 
-        <div class="grid2">
+        <div class="dossier-grid">
 
-  <a class="q dossier-card" href="daniel-armet.html">
-  <div class="thumb">
-    <img src="assets/portrait1.jpg" alt="Daniel Armet">
-  </div>
-
-  <div class="meta">
-    <div class="name">DANIEL ARMET</div>
-    <div class="role mono">TECH / AGENT METACORP</div>
-    <div class="tags">
-      <span class="pill warn">ACTIVE</span>
-      <span class="pill warn">RESTRICTED</span>
+  <a class="dossier-tile" href="daniel-armet.html">
+    <div class="thumb"><img src="assets/portrait2.jpg" alt="Daniel Armet"></div>
+    <div class="meta">
+      <div class="name">DANIEL ARMET</div>
+      <div class="role mono">TECH / AGENT METACORP</div>
+      <div class="tags">
+        <span class="pill warn">ACTIVE</span>
+        <span class="pill warn">RESTRICTED</span>
+      </div>
     </div>
-  </div>
-</a>
-
-  <a class="q" href="ellis.html">
-    ELLIS VEIL
-    <span class="pill" style="margin-left:8px">ARCHIVED</span>
   </a>
 
-  <a class="q" href="nico-vasquez.html">
-    NICO VASQUEZ
-    <span class="pill" style="margin-left:8px">ACTIVE</span>
+  <a class="dossier-tile" href="ellis.html">
+    <div class="thumb"><img src="assets/portrait.jpg" alt="Ellis Veil"></div>
+    <div class="meta">
+      <div class="name">ELLIS VEIL</div>
+      <div class="role mono">FIELD MED</div>
+      <div class="tags">
+        <span class="pill">ARCHIVED</span>
+      </div>
+    </div>
   </a>
 
-  <a class="q" href="iren.html">
-    IREN
-    <span class="pill" style="margin-left:8px">NETRUNNER</span>
+  <a class="dossier-tile" href="nico-vasquez.html">
+    <div class="thumb"><img src="assets/nico.jpg" alt="Nico Vasquez"></div>
+    <div class="meta">
+      <div class="name">NICO VASQUEZ</div>
+      <div class="role mono">TECH</div>
+      <div class="tags">
+        <span class="pill">ACTIVE</span>
+      </div>
+    </div>
+  </a>
+
+  <a class="dossier-tile" href="iren.html">
+    <div class="thumb"><img src="assets/iren.jpg" alt="Iren"></div>
+    <div class="meta">
+      <div class="name">IREN</div>
+      <div class="role mono">NETRUNNER</div>
+      <div class="tags">
+        <span class="pill">NETRUNNER</span>
+      </div>
+    </div>
   </a>
 
 </div>
