--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 
-<body>
+<body class="home">
   <header class="topbar">
     <div class="brand">
       <div class="brand__title">NEURALLEAK // ACCESS TERMINAL</div>
